; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/version/extr_info.c_VersionDwordLong2String.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/version/extr_info.c_VersionDwordLong2String.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"%d.%d.%d.%d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @VersionDwordLong2String to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @VersionDwordLong2String(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %9 = load i32, i32* %3, align 4
  %10 = ashr i32 %9, 48
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %3, align 4
  %12 = ashr i32 %11, 32
  %13 = and i32 %12, 65535
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* %3, align 4
  %15 = ashr i32 %14, 16
  %16 = and i32 %15, 65535
  store i32 %16, i32* %7, align 4
  %17 = load i32, i32* %3, align 4
  %18 = and i32 %17, 65535
  store i32 %18, i32* %8, align 4
  %19 = load i32, i32* %4, align 4
  %20 = load i32, i32* %5, align 4
  %21 = load i32, i32* %6, align 4
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* %8, align 4
  %24 = call i32 @sprintf(i32 %19, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %20, i32 %21, i32 %22, i32 %23)
  ret void
}

declare dso_local i32 @sprintf(i32, i8*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
